@@ -1,3 +1,8 @@
+2011-06-21  Alan Modra  <amodra@gmail.com>
+
+	* config/rs6000/rs6000.c (rs6000_cannot_force_const_mem): New func.
+	(TARGET_CANNOT_FORCE_CONST_MEM): Update definition.
+
 2011-06-20  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>
 
 	Backport from mainline.
